data/derived/comb/progs/unify/prog3901.ml.out
Characters 191-193:
  | Cosine (a) -> cos ( pi * float_of_int eval (a,x,y) )
                        ^^
Error: This expression has type float but an expression was expected of type
         int
